--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^10.2.1",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.21",
     "@types/leaflet.markercluster": "^1.5.6",
     "@types/node": "^24.10.1",
-    "sass-embedded": "^1.93.3"
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "sass-embedded": "^1.93.3",
+    "tailwindcss": "^3.4.14"
   }
 }
